* Turn on warning flags, fix warnings * Export Insert and SetProperties

--- a/type-level-sets.cabal
+++ b/type-level-sets.cabal
@@ -81,7 +81,7 @@ source-repository head
 library
   hs-source-dirs:       src
   other-extensions:     TypeInType
-
+  ghc-options:          -Wall -Wredundant-constraints
 
   exposed-modules:      Data.Type.Set
                         Data.Type.Map
